utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/NoComponentInModule.ide
package valid

typedef module NoComponentInModule {
    configuration config: NoComponentInModuleConfiguration {
    }
}
