utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/CircularDependencyModule.ide
package invalid

typedef module CircularDependencyModule {
    module sub: CircularDependencySubModule
}
